--- a/style.css
+++ b/style.css
@@ -1,96 +1,55 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --primary-background-color: #943a3a; /*#588157;*/
+  --primary-background-color-dark: #451414;
+  --primary-text-color: #fff;
+  --secondary-background-color: #ffd59B;
+  --secondary-text-color: #333;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+*{
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  margin:0px;
+  padding:0px;
+}
+
+header {
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
+  box-shadow: 0x 3px 5px var(--primary-background-color-dark);
+}
+header .container{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  padding-left:1rem;
+  padding-right: 1rem;
+}
+header .container nav ul{
+  list-style: none;
+  display: flex;
+  margin:0px;
+  padding:0px;
+}
+header .container nav ul li a {
+  text-decoration: none;
+  color: var(--primary-text-color);
+  display: inline-block;
+  padding:0.75rem 0.8rem;
+  transition: background-color 1s ease;
+}
+header .container nav ul li a :hover{
+  background-color: var(--secondary-background-color);
+  color:var(--secondary-text-color);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header .container nav .hamburger {
+  display: none;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+header .container .branding {
+  display: flex;
+  align-items: center;
+  gap:0.5rem;
 }
