--- a/less/main.less
+++ b/less/main.less
@@ -9,9 +9,35 @@
 @no-margin: 0px;
 @default-gap: 0.5rem;
 
+@breakResolutions: {
+    tablet: 720px;
+    desktop: 1025px;
+    widescreen: 1300px;
+    ultrawide: 2000px;
+};
+
+@breakPrefix: {
+    mobile: sm;
+    tablet: md;
+    desktop: lg;
+    widescreen: xl;
+    ultrawide: xxl;
+}
+
+.default_button {
+    text-decoration: none;
+    padding:0.8rem 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: @primary-background-color;
+    color:@primary-text-color;
+    box-shadow: 1px 1px 3px @primary-background-color-dark;
+};
 
 @import 'header.less';
 @import 'hero.less';
+@import 'components.less';
 
 * {
     box-sizing: border-box;
@@ -21,3 +47,8 @@ body {
     margin: 0px;
     padding: 0px;
 }
+
+main .container {
+    padding:1rem;
+}
+
