LESS Supercharges, mixins con parametros y guardas y purge css para optimizar

--- a/less/main.less
+++ b/less/main.less
@@ -17,11 +17,11 @@
 };
 
 @breakPrefix: {
-    mobile: sm;
-    tablet: md;
-    desktop: lg;
-    widescreen: xl;
-    ultrawide: xxl;
+    mobile: sm-;
+    tablet: md-;
+    desktop: lg-;
+    widescreen: xl-;
+    ultrawide: xxl-;
 }
 
 .default_button {
@@ -38,6 +38,7 @@
 @import 'header.less';
 @import 'hero.less';
 @import 'components.less';
+@import 'grid.less';
 
 * {
     box-sizing: border-box;
