Instalación de Handlebars y parciales sencillos

--- a/less/main.less
+++ b/less/main.less
@@ -39,6 +39,7 @@
 @import 'hero.less';
 @import 'components.less';
 @import 'grid.less';
+@import 'footer.less';
 
 * {
     box-sizing: border-box;
