--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -6,11 +6,9 @@
         </section>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="product.html">Product</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                {{#each nav}}
+                    <li><a href="%BASE_URL%{{uri}}">{{label}}</a></li>
+                {{/each}}
             </ul>
             <button class="hamburger">
                 <span></span>
