--- a/less/main.less
+++ b/less/main.less
@@ -4,6 +4,7 @@
 @secondary-background-color: #ffd59B;
 @secondary-background-color-dark: darken(@secondary-background-color, 20%);
 @secondary-text-color: #333;
+@tertiary-text-color: #666;
 @default-padding: 1rem;
 @default-margin: 1rem;
 @no-margin: 0px;
@@ -40,6 +41,7 @@
 @import 'components.less';
 @import 'grid.less';
 @import 'footer.less';
+@import 'testimonio.less';
 
 * {
     box-sizing: border-box;
